--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.3",
+    "@ckeditor/ckeditor5-angular": "^7.0.1",
+    "@dimpu/ngx-quill": "^7.0.10",
     "animejs": "^3.2.2",
     "express": "^4.18.2",
     "force": "^0.0.3",
@@ -29,6 +31,7 @@
     "ng-angular-popup": "^0.5.2",
     "ngx-apexcharts": "^0.4.7",
     "ngx-countup": "^13.1.0",
+    "quill": "^1.3.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
